# Auth0-developement-challenge

./: .gitignore  .replit  Dockerfile  README.md  SETUP.md  app.py  auth.py  chat_history.db  database.py  main.py  pyproject.toml  replit.md  requirements.txt  test.py
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted-Auth0-for-AI-Agents-Challenge-Signed-up-View-Entries-Secure-AI-agents-humans-and-whatever-come-1760856813492_1760856813493.txt
static/: chat.html  index.html  new_landing_page.html  script.js  style.css
uploads/: Technical_assessment.txt  merged-document-2025-10-09.txt
