[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = "^3.11"
dependencies = [
    "authlib>=1.6.5",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "openai>=1.93.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
